42962 fix(modal tune view): adjust spacing between buttons for mobile version

--- a/frontend/src/public/components/TuneViewModal/TuneViewModal.css
+++ b/frontend/src/public/components/TuneViewModal/TuneViewModal.css
@@ -51,9 +51,9 @@
   }
 
   .tune-view-modal__footer {
-    justify-content: space-between;
     margin-right: 3.2rem;
     display: flex;
+    gap: 0.8rem;
     flex-shrink: 0;
     height: 4rem;
 
